Django upgrade, added pip-tools to requirements

--- a/backend/requirements.in
+++ b/backend/requirements.in
@@ -1,7 +1,7 @@
 -e git+https://github.com/rense/django-rest-camel#egg=django-rest-camel
 
 argon2-cffi
-django
+django>=2.2.2
 django-anymail[mailgun]
 django-cors-headers
 django-extensions
@@ -14,5 +14,6 @@ invoke
 mysqlclient
 
 pillow
+pip-tools
 
 werkzeug
