--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,9 @@
     "i18next-xhr-backend": "^1.5.1",
     "immutable": "^3.8.2",
     "jest": "20.0.4",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.13",
+    "minimatch": "^3.0.2",
     "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
